--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
-    "@svgdotjs/svg.js": "^3.1.2"
+    "@svgdotjs/svg.js": "^3.1.2",
+    "firebase": "^9.15.0"
   }
 }
