--- a/package.json
+++ b/package.json
@@ -6,17 +6,23 @@
   "license": "MIT",
   "author": "Amrish Bharatiya",
   "scripts": {
-    "build": "parcel build index.html",
-    "dev": "parcel index.html --open",
+    "build": "parcel build src/index.html",
+    "dev": "parcel src/index.html --open",
     "start": "npm run build && npm run dev",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
+    "@parcel/packager-raw-url": "^2.8.1",
+    "@parcel/transformer-webmanifest": "^2.8.1",
+    "parcel": "^2.8.1",
     "parcel-bundler": "^1.12.4",
+    "postcss": "^8.4.19",
+    "tailwindcss": "^3.2.4",
     "typescript": "^4.9.4"
   },
   "dependencies": {
     "@svgdotjs/svg.js": "^3.1.2",
-    "firebase": "^9.15.0"
+    "firebase": "^9.15.0",
+    "parcel-reporter-static-files-copy": "^1.4.0"
   }
 }
